--- a/src/app/admin/workflows/workflows.component.html
+++ b/src/app/admin/workflows/workflows.component.html
@@ -98,7 +98,7 @@
   </button>
   <nz-dropdown-menu #menu="nzDropdownMenu">
     <ul nz-menu>
-      <li nz-menu-item (click)="openControls(data)">管理</li>
+      <li nz-menu-item (click)="openControl(data)">管理</li>
       <li nz-menu-item (click)="openForm(data)"> 修改 </li>
       <li nz-menu-item nzDanger (click)="delete(data)"> 删除 </li>
     </ul>
