--- a/src/app/admin/datasets/datasets.component.html
+++ b/src/app/admin/datasets/datasets.component.html
@@ -100,7 +100,7 @@
           </button>
           <nz-dropdown-menu #menu="nzDropdownMenu">
             <ul nz-menu>
-              <li nz-menu-item (click)="openControls(data.name)"> 管理 </li>
+              <li nz-menu-item (click)="openControl(data.name)"> 管理 </li>
               <li nz-menu-item nzDanger (click)="delete(data)"> 删除 </li>
             </ul>
           </nz-dropdown-menu>
