--- a/src/app/admin/projects/projects.component.html
+++ b/src/app/admin/projects/projects.component.html
@@ -23,7 +23,7 @@
         </ul>
       </nz-dropdown-menu>
     </ng-container>
-    <button *nzSpaceItem nz-button nzType="primary" (click)="setProject()"> 新增 </button>
+    <button *nzSpaceItem nz-button nzType="primary" (click)="openForm()"> 新增 </button>
   </nz-space>
 </ng-template>
 
@@ -68,7 +68,7 @@
       <span nz-icon [nzType]="'close-circle'"></span>
       REDIS
     </nz-tag>
-    <a (click)="setOpenAPI(data)">
+    <a (click)="openAuthorization(data)">
       <ng-container *ngIf="data.secret_id && data.secret_key; else unsetRef">
         <span>存在 {{ !data.entry ? 0 : data.entry.length }} 个限制</span>
       </ng-container>
@@ -84,7 +84,8 @@
   </button>
   <nz-dropdown-menu #menu="nzDropdownMenu">
     <ul nz-menu>
-      <li nz-menu-item (click)="setProject(data)"> 修改 </li>
+      <li nz-menu-item> 管理 </li>
+      <li nz-menu-item (click)="openForm(data)"> 修改 </li>
       <li nz-menu-item nzDanger (click)="delete(data)"> 删除 </li>
     </ul>
   </nz-dropdown-menu>
