--- a/src/app/admin/clusters/form/form.component.html
+++ b/src/app/admin/clusters/form/form.component.html
@@ -5,32 +5,48 @@
       <input nz-input formControlName="name" placeholder="请输入集群名称" />
     </nz-form-control>
   </nz-form-item>
-  <ng-container formGroupName="config">
+  <nz-form-item>
+    <nz-form-label nzRequired>接入方式</nz-form-label>
+    <nz-form-control>
+      <nz-radio-group formControlName="kind">
+        <label nz-radio-button nzValue="kubernetes">Kubernetes</label>
+        <label nz-radio-button nzValue="agent" nzDisabled>代理器</label>
+      </nz-radio-group>
+    </nz-form-control>
+  </nz-form-item>
+
+  <ng-container *ngIf="!edit" formGroupName="config">
     <nz-form-item>
-      <nz-form-label nzRequired> Host </nz-form-label>
+      <nz-form-label nzRequired> 主机地址 </nz-form-label>
       <nz-form-control nzHasFeedback>
-        <input nz-input formControlName="host" placeholder="kubeconfig [cluster.server]" />
+        <input nz-input formControlName="host" placeholder="kubeconfig <cluster.server>" />
       </nz-form-control>
     </nz-form-item>
     <nz-form-item>
-      <nz-form-label nzRequired> CAData </nz-form-label>
+      <nz-form-label nzRequired> 证书颁发机构数据 </nz-form-label>
       <nz-form-control nzHasFeedback>
-        <input nz-input formControlName="ca_data" placeholder="kubeconfig [cluster.certificate-authority-data]" />
+        <input nz-input formControlName="ca_data" placeholder="kubeconfig <cluster.certificate-authority-data>" />
       </nz-form-control>
     </nz-form-item>
     <nz-form-item>
-      <nz-form-label nzRequired> CertData </nz-form-label>
+      <nz-form-label nzRequired> 客户端证书数据 </nz-form-label>
       <nz-form-control nzHasFeedback>
-        <input nz-input formControlName="cert_data" placeholder="kubeconfig [user.client-certificate-data]" />
+        <input nz-input formControlName="cert_data" placeholder="kubeconfig <user.client-certificate-data>" />
       </nz-form-control>
     </nz-form-item>
     <nz-form-item>
-      <nz-form-label nzRequired> KeyData </nz-form-label>
+      <nz-form-label nzRequired> 客户端密钥数据 </nz-form-label>
       <nz-form-control nzHasFeedback>
-        <input nz-input formControlName="key_data" placeholder="kubeconfig [user.client-key-data]" />
+        <input nz-input formControlName="key_data" placeholder="kubeconfig <user.client-key-data>" />
       </nz-form-control>
     </nz-form-item>
   </ng-container>
+  <nz-form-item>
+    <nz-form-label nzRequired> 管理集群 </nz-form-label>
+    <nz-form-control>
+      <nz-switch formControlName="admin"></nz-switch>
+    </nz-form-control>
+  </nz-form-item>
 </form>
 
 <div *nzModalFooter>
