update: auto-deploy for project overview

--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -1,6 +1,6 @@
 <nz-layout style="height: 100%">
   <nz-header class="nav">
-    <app-nav type="admin"></app-nav>
+    <app-nav></app-nav>
   </nz-header>
   <nz-layout>
     <nz-sider nzWidth="240px" nzTheme="light">
