update: Migrate workflows and queues to project workspaces and simplify redundancy, adding endpoints management service access

--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -13,13 +13,9 @@
           <span nz-icon nzType="cluster" nzTheme="outline"></span>
           <span>集群</span>
         </li>
-        <li nz-menu-item nzMatchRouter routerLink="workflows">
-          <span nz-icon nzType="schedule" nzTheme="outline"></span>
-          <span>工作流</span>
-        </li>
-        <li nz-menu-item nzMatchRouter routerLink="queues">
-          <span nz-icon nzType="pull-request" nzTheme="outline"></span>
-          <span>消息队列</span>
+        <li nz-menu-item nzMatchRouter routerLink="endpoints">
+          <span nz-icon nzType="api" nzTheme="outline"></span>
+          <span>服务端点</span>
         </li>
         <li nz-menu-item nzMatchRouter routerLink="imessages">
           <span nz-icon nzType="message" nzTheme="outline"></span>
