--- a/src/app/index/index.component.html
+++ b/src/app/index/index.component.html
@@ -14,6 +14,14 @@
           <span nz-icon nzType="project" nzTheme="outline"></span>
           <span>项目概况</span>
         </li>
+        <li nz-menu-item nzMatchRouter routerLink="workflows">
+          <span nz-icon nzType="schedule" nzTheme="outline"></span>
+          <span>工作流</span>
+        </li>
+        <li nz-menu-item nzMatchRouter routerLink="queues">
+          <span nz-icon nzType="pull-request" nzTheme="outline"></span>
+          <span>消息队列</span>
+        </li>
       </ul>
     </nz-sider>
     <nz-layout style="overflow: hidden auto">
