update: Improve endpoints and workflows

--- a/src/app/admin/clusters/clusters.component.html
+++ b/src/app/admin/clusters/clusters.component.html
@@ -62,7 +62,7 @@
       <nz-tag>STORAGE：{{ v.storage | nzBytes }}</nz-tag>
     </ng-container>
     <nz-tag *ngIf="data.admin" nzColor="orange">管理集群</nz-tag>
-    <a (click)="openDetail(data)">查看</a>
+    <a (click)="openDetail(data)">查看详情</a>
   </ng-template>
 </wpx-table>
 
