--- a/src/app/admin/clusters/detail/detail.component.html
+++ b/src/app/admin/clusters/detail/detail.component.html
@@ -1,9 +1,6 @@
 <nz-layout style="height: 100%; background: transparent">
   <nz-page-header>
-    <nz-page-header-title>集群节点</nz-page-header-title>
-    <nz-page-header-tags>
-      <nz-tag>{{ data.name }}</nz-tag>
-    </nz-page-header-tags>
+    <nz-page-header-title>{{ data.name }}</nz-page-header-title>
   </nz-page-header>
 
   <nz-content style="overflow: hidden auto">
