--- a/src/app/admin/projects/projects.component.html
+++ b/src/app/admin/projects/projects.component.html
@@ -67,7 +67,7 @@
       </ng-container>
     </nz-tag>
     <nz-tag>
-      <span nz-icon [nzType]="data.nats ? 'check-circle' : 'close-circle'"></span>
+      <span nz-icon [nzType]="data.nats === '*' ? 'check-circle' : 'close-circle'"></span>
       NATS
     </nz-tag>
     <nz-tag>
