--- a/src/app/index/queues/detail/detail.component.html
+++ b/src/app/index/queues/detail/detail.component.html
@@ -1,10 +1,6 @@
 <nz-layout style="height: 100%; background: transparent">
   <nz-page-header>
-    <nz-page-header-title>消息队列详情</nz-page-header-title>
-    <nz-page-header-subtitle>{{ doc.name }}</nz-page-header-subtitle>
-    <nz-page-header-tags>
-      <nz-tag>{{ project.name }}</nz-tag>
-    </nz-page-header-tags>
+    <nz-page-header-title>{{ doc.name }}</nz-page-header-title>
     <nz-page-header-extra>
       <nz-space nzAlign="center">
         <button
