update: [handless cms] content-builder

--- a/src/app/index/index.component.html
+++ b/src/app/index/index.component.html
@@ -14,7 +14,7 @@
           <span nz-icon nzType="project" nzTheme="outline"></span>
           <span>项目概况</span>
         </li>
-        <li *ngIf="data.kind === 'cms'" nz-menu-item nzMatchRouter routerLink="content-builder">
+        <li *ngIf="data.kind === 'cms'" nz-menu-item nzMatchRouter routerLink="builders">
           <span nz-icon nzType="layout" nzTheme="outline"></span>
           <span>内容生成器</span>
         </li>
