--- a/src/app/index/builders/builders.component.html
+++ b/src/app/index/builders/builders.component.html
@@ -1,6 +1,74 @@
 <nz-layout style="height: 100%; background: #fff" class="inner-layout">
-  <nz-sider nzWidth="270px" nzTheme="light">
-    <app-index-builders-outline></app-index-builders-outline>
+  <nz-sider style="padding: 12px" nzWidth="330px" nzTheme="light">
+    <nz-space nzAlign="center">
+      <nz-input-group *nzSpaceItem [nzPrefix]="suffixIconSearch" style="width: 230px">
+        <input type="text" nz-input placeholder="搜索" [(ngModel)]="searchText" />
+        <ng-template #suffixIconSearch>
+          <span nz-icon nzType="search"></span>
+        </ng-template>
+      </nz-input-group>
+
+      <nz-button-group *nzSpaceItem>
+        <button nz-button nzType="text" nz-tooltip="刷新" (click)="getData()">
+          <span nz-icon nzType="reload"></span>
+        </button>
+        <button nz-button nzType="text" nz-tooltip="新增" (click)="openForm()">
+          <span nz-icon nzType="plus-circle" nzTheme="outline"></span>
+        </button>
+      </nz-button-group>
+    </nz-space>
+    <nz-divider style="margin: 12px 0 6px"></nz-divider>
+    <nz-tree
+      nzBlockNode
+      nzDraggable
+      [(nzSelectedKeys)]="activedKey"
+      [nzData]="nodes"
+      [nzShowExpand]="false"
+      [nzTreeTemplate]="Tpl"
+      [nzSearchValue]="searchText"
+      (nzClick)="selectedNode($event)"
+      (nzContextMenu)="openContextMenu($event, menu)"
+    >
+    </nz-tree>
   </nz-sider>
-  <nz-content> </nz-content>
+  <nz-content>
+    <router-outlet></router-outlet>
+  </nz-content>
 </nz-layout>
+
+<ng-template #Tpl let-node>
+  <nz-row class="custom-node" nzAlign="middle" nzJustify="space-between">
+    <nz-col>
+      <ng-container *ngIf="!node.isLeaf; else notLeafRef">
+        <span nz-icon [nzType]="node.isExpanded ? 'folder-open' : 'folder'" (click)="openFolder(node)"></span>
+      </ng-container>
+      <ng-template #notLeafRef>
+        <span nz-icon nzType="file"></span>
+      </ng-template>
+      <span class="folder-name">{{ node.title }}</span>
+    </nz-col>
+    <nz-col></nz-col>
+    <nz-col>
+      <nz-tag *ngIf="builders.dict[node.key] as data">
+        <ng-container *ngIf="data.icon">
+          <span nz-icon [nzType]="data.icon" nzTheme="outline"></span>
+        </ng-container>
+        <ng-container [ngSwitch]="data.kind">
+          <ng-container *ngSwitchCase="'nav'"> 导航</ng-container>
+          <ng-container *ngSwitchCase="'collection'"> 集合类型</ng-container>
+          <ng-container *ngSwitchCase="'single'"> 单一类型</ng-container>
+          <ng-container *ngSwitchCase="'manual'"> 自定义</ng-container>
+        </ng-container>
+      </nz-tag>
+    </nz-col>
+  </nz-row>
+</ng-template>
+
+<nz-dropdown-menu #menu="nzDropdownMenu">
+  <ul *ngIf="actived" nz-menu>
+    <li nz-menu-item>{{ actived.title }}</li>
+    <li nz-menu-divider></li>
+    <li nz-menu-item (click)="openForm(builders.dict[actived.key])">编辑</li>
+    <li nz-menu-item (click)="delete(builders.dict[actived.key])">删除</li>
+  </ul>
+</nz-dropdown-menu>
